--- a/index.html
+++ b/index.html
@@ -7,22 +7,18 @@
   <script defer src="script.js"></script>
 </head>
 <body>
-  <nav>
-    <a href="#home" class="topmenu">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="white" width="32px">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M15 11.25l-3-3m0 0l-3 3m3-3v7.5M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-      </svg>
-    </a>
+<nav class="navbar">
+  <div class="navbar-brand">
+    <div class="navbar-title">Guilherme Carvalho</div>
+    <div class="navbar-subtitle">Senior Software Developer & Ultra Marathon Runner</div>
+  </div>
+  <div class="navbar-links">
     <a href="#about" class="topmenu">About Me</a>
     <a href="#skills" class="topmenu">Skills</a>
     <a href="#projects" class="topmenu">Projects</a>
     <a href="#recommendations" class="topmenu">Recommendations</a>
-  </nav>
-
-  <div class="profile_name">
-  Guilherme Carvalho<br>
-  Senior Software Developer & Ultra Marathon Runner
-	</div>
+  </div>
+</nav>
 
 
 <section id="about" class="about-section">
